--- a/public/assets/css/adminpromotional.css
+++ b/public/assets/css/adminpromotional.css
@@ -466,7 +466,6 @@
     font-family: 'Poppins', sans-serif;
     width: 100%;
     margin: 100px auto;  
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .promotional-footer{
     width:95%;
@@ -474,7 +473,7 @@
 }
 @media only screen and (max-width: 768px) {
     .promotional-email-composer {
-        width: 100%;
+        width: 95%;
         padding: 10px;
         margin-top: 60px;
         position: static;  
